--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "App to Store Your Personal Goals",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
+    "server": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Leo Lien",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "^3.2.2",
+    "express": "^4.17.1",
+    "express-validator": "^6.2.0",
+    "mongoose": "^5.6.13",
+    "nodemon": "^1.19.2"
+  }
 }
