--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "App to Store Your Personal Goals",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "node index",
+    "server": "nodemon index",
     "frontend": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Leo Lien",
@@ -22,5 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "nodemon": "^1.19.2"
+  },
+  "engines": {
+    "node": "10.15.1"
   }
 }
