--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^4.1.2",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
+    "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.2",
+    "node": "^12.10.0",
     "nodemon": "^1.19.2"
   }
 }
